src/test/deca/context/valid/sans_objet/cast_cont_01.deca
// Description:
//    Cast
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

{
   int a = 4;
   float y = 3.14;
   y = (float) (a);
}
